# triples-sigfast

./: .coverage  .coveragerc  .coveragerc.save  .gitignore  CHANGELOG.md  LICENSE  README.md  paper.bib  paper.md  pure_root_analysis.py  pyproject.toml  requirements.txt  setup.py
.github/: cliff.toml
.github/workflows/: changelog.yml  main.yml  publish.yml
demo/: demo_for_professor.ipynb
demo/.ipynb_checkpoints/: demo_for_professor-checkpoint.ipynb
paper/: paper.md
tests/: test_core.py  test_hep_io.py  test_hep_jets.py  test_hep_kinematics.py  test_nuclear.py  test_readers.py  test_viz.py
triples_sigfast/: __init__.py  core.py
triples_sigfast/cli/: main.py  report.py  welcome.py
triples_sigfast/core/: signal.py
triples_sigfast/hep/: __init__.py  jets.py  kinematics.py
triples_sigfast/io/: __init__.py  fluka.py  hepmc.py  lhe.py  mcnp.py  raw.py  root_reader.py  serpent.py  sim_reader.py
triples_sigfast/nuclear/: dose.py  isotope.py  shielding.py  sources.py
triples_sigfast/stats/: mc.py
triples_sigfast/viz/: __init__.py  physics_plot.py
