[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "triples-sigfast"
version = "1.4.0"
description = "An enterprise-grade, JIT-compiled time-series and nuclear physics analysis engine stress-tested on 100M+ row datasets."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "TripleS Studio" }]
requires-python = ">=3.10"
keywords = ["nuclear physics", "simulation", "geant4", "fluka", "mcnp", "serpent", "numba", "jit", "physics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.55.0",
    "pandas>=1.3.0",
    "uproot>=5.0.0",
    "awkward>=2.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "h5py>=3.0",
]

[project.urls]
Homepage = "https://github.com/SamdaniSayam/triples-sigfast"
"Bug Tracker" = "https://github.com/SamdaniSayam/triples-sigfast/issues"
PyPI = "https://pypi.org/project/triples-sigfast/"

[tool.setuptools.packages.find]
where = ["."]
include = ["triples_sigfast*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-fail-under=85"
